src/test/deca/syntax/invalid/provided/duo_add.deca

{int x = 2 + int y = 6 ;
println("erreur");
}

/*  Commentaire  */
